Fix footer spacing after reset.

--- a/packages/docs/css/_site-footer.scss
+++ b/packages/docs/css/_site-footer.scss
@@ -16,6 +16,8 @@
   background: var(--color-blue-500);
   color: var(--color-blue-200);
 
+  padding: var(--space-medium) 0;
+
   a {
     color: var(--color-blue-200);
   }
